deploy/movies/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-api
  namespace: movies
  labels:
    app.kubernetes.io/name: movies-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: movies-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
